[package]
name = "cv_camstream"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
rscam = "0.5.5"
thiserror = "1.0.20"
nalgebra = "0.21.1"
cv-core = "0.15.0"
cv-pinhole = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_any = "0.5.0"

[dev-dependencies]
minifb = "0.16.0"