[package]
name = "cv_camstream"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", default-features = false }
image = "0.23.6"
derive_more = { version = "0.99.8", default-features = false }
nshare = { version = "0.1.1", features = ["ndarray", "image"] }
ndarray = { version = "0.13.1", default-features = false }
rscam = "0.5.5"
thiserror = "1.0.20"
nalgebra = "0.21.1"
cv-core = "0.15.0"
cv-pinhole = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_any = "0.5.0"

[dev-dependencies]
minifb = "0.16.0"